--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,7 @@ body {
 }
 
 main {
-  height: 100%;
+  max-height: 100%;
 }
 
 h1, h2, h3 {
@@ -42,8 +42,26 @@ h1, h2, h3 {
   letter-spacing: 0.05em; /* adds breathing space */
 }
 
+.text-dark-beige {
+  color: #391e10;
+}
+
+.border-dark-beige {
+  border-color: #391e10;
+}
+
 .bg-color-cream {
   background-color: #ebd3bb;
+}
+
+.bg-img-peach {
+  background-image: url("/images/bg-peach.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+.image-gallery-svg {
+  transform: scale(0.5) !important;
 }
 
 /* ///////////////////////// */
