--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -46,8 +46,20 @@ h1, h2, h3 {
   color: #391e10;
 }
 
+.text-light-beige {
+  color: #a07856;
+}
+
+.text-beige {
+  color: #6f4d38;
+}
+
 .border-dark-beige {
   border-color: #391e10;
+}
+
+.bg-beige {
+  background-color: #a07856;
 }
 
 .bg-color-cream {
@@ -56,6 +68,12 @@ h1, h2, h3 {
 
 .bg-img-peach {
   background-image: url("/images/bg-peach.jpg");
+  background-position: center;
+  background-size: cover;
+}
+
+.bg-img-beige {
+  background-image: url("/images/bg-beige.jpg");
   background-position: center;
   background-size: cover;
 }
