--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,6 +62,10 @@ h1, h2, h3 {
   background-color: #a07856;
 }
 
+.bg-dark-beige {
+  background-color: #391e10;
+}
+
 .bg-color-cream {
   background-color: #ebd3bb;
 }
