--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -62,6 +62,14 @@ h1, h2, h3 {
   background-color: #a07856;
 }
 
+.hover-bg-beige:hover {
+  background-color: #a07856;
+}
+
+.hover-bg-beige:hover p {
+  color: #391e10 !important;
+}
+
 .bg-dark-beige {
   background-color: #391e10;
 }
